// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot for one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
     
    expense
     totalling 
     
    $100.00
  </h1>
</div>
`;

exports[`snapshot for two expenses 1`] = `
<div>
  <h1>
    Viewing 
    2
     
     
    expenses
     totalling 
     
    $200.00
  </h1>
</div>
`;
